--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,27 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
   http: ^0.13.4
   provider: ^6.0.1
+  story_view: ^0.13.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: 'assets/icons/profileicon.png'
+  android: true
+  ios: true
+
 flutter:
 
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: OnePlus-Regular
